--- a/login.html
+++ b/login.html
@@ -89,24 +89,24 @@
             <button id="btn__registrarse">registrarse</button>
           </div>
           <!-- formulario de logueo y registro -->
-          <div class="formulario__login-register">
-            <!-- login -->
-            <form action="" class="formulario__login">
-              <h2>inciciar sesíon</h2>
-              <input type="text" placeholder="correo electronico" />
-              <input type="password" placeholder="contraseña" />
-              <button>entrar</button>
-            </form>
-            <!-- registro -->
-            <form action="" class="formulario__register">
-              <h2>registrarse</h2>
-              <input type="text" placeholder="Nombre Completo" />
-              <input type="text" placeholder="Correo Electronico" />
-              <input type="text" placeholder="usuario" />
-              <input type="password" placeholder="contraseña" />
-              <button>Registrarse</button>
-            </form>
-          </div>
+        </article>
+        <article class="formulario__login-register">
+          <!-- login -->
+          <form action="" class="formulario__login">
+            <h2>inciciar sesíon</h2>
+            <input type="text" placeholder="correo electronico" />
+            <input type="password" placeholder="contraseña" />
+            <button>entrar</button>
+          </form>
+          <!-- registro -->
+          <form action="" class="formulario__register">
+            <h2>registrarse</h2>
+            <input type="text" placeholder="Nombre Completo" />
+            <input type="text" placeholder="Correo Electronico" />
+            <input type="text" placeholder="usuario" />
+            <input type="password" placeholder="contraseña" />
+            <button>Registrarse</button>
+          </form>
         </article>
       </section>
     </main>
