se corrigen errores en css y se implementan cambios en htm para la validacion de formularios, se crea logica para animacion de login

--- a/login.html
+++ b/login.html
@@ -74,7 +74,7 @@
         </div>
       </nav>
     </header>
-    <main class="main__login">
+    <main class="main__login mb-5">
       <section class="formulario__contenedor">
         <article class="formulario__trasero">
           <div class="formulario__trasero-login">
@@ -84,7 +84,7 @@
           </div>
 
           <div class="formulario__trasero-register">
-            <h3>¿ya tienes una cuenta?</h3>
+            <h3>¿no tienes cuenta?</h3>
             <p>registrate para iniciar sesíon</p>
             <button id="btn__registrarse">registrarse</button>
           </div>
@@ -96,21 +96,24 @@
             <h2>inciciar sesíon</h2>
             <input type="text" placeholder="correo electronico" />
             <input type="password" placeholder="contraseña" />
+            <a href="" class="d-block text-decoration-none">
+              ¿olvidaste tu contraseña?</a
+            >
             <button>entrar</button>
           </form>
           <!-- registro -->
           <form action="" class="formulario__register">
             <h2>registrarse</h2>
-            <input type="text" placeholder="Nombre Completo" />
-            <input type="text" placeholder="Correo Electronico" />
-            <input type="text" placeholder="usuario" />
-            <input type="password" placeholder="contraseña" />
+            <input type="text" id="" placeholder="Nombre Completo" />
+            <input type="text" id="email" placeholder="Correo Electronico" />
+            <input type="text" id="user" placeholder="usuario" />
+            <input type="password" id="password" placeholder="contraseña" />
             <button>Registrarse</button>
           </form>
         </article>
       </section>
     </main>
-    <footer class="headFoot py-5">
+    <footer class="headFoot py-5 mt-5">
       <section class="py-4 text-center text-light">
         <article class="row mx-0">
           <div class="col-sm-12 col-md-12 col-lg-4 py-3"></div>
