--- a/admin.html
+++ b/admin.html
@@ -17,6 +17,7 @@
     <link rel="shorcut icon" href="img\biona logo.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2ee0d9adf3.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.15.5/dist/sweetalert2.all.min.js"></script>
     <title>El Critico</title>
 </head>
 
@@ -25,97 +26,105 @@
 
     </header>
     <main class="container">
-        <section>
-            <div class="row my-4">
-                <div class="col-9 text-center">
-                    <h3 class="color1">Tabla de productos</h3>
-                </div>
-                <div class="col-1">
-                    <button class="btn btn-primary" id="btnAgregar">Agregar</button>
-                </div>
-                <hr class="color1 my-2">
+
+        <section class="my-5">
+          <div class="row">
+            <div class="col-10">
+              <h3 class="color1">Tabla de productos</h3>
             </div>
-            <div class="table-responsive">
-                <table class="table table-dark table-striped">
-                    <tr>
-                        <th scope="col">Codigo</th>
-                        <th scope="col">Nombre</th>
-                        <th scope="col">Categoria</th>
-                        <th scope="col">Descripcion</th>
-                        <th scope="col">Publicado</th>
-                        <th scope="col">Opciones</th>
-                        <th scope="col">Destacar</th>
-                    </tr>
-                    </thead>
-                    <tbody id="tablaFunkopop">
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Dark</td>
-                            <td>Series</td>
-                            <td>Agregar descripcion</td>
-                            <td>
-                                <div class="form-check form-switch">
-                                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                                    <label class="form-check-label" for="flexSwitchCheckDefault"></label>
-                                </div>
-                            </td>
-                            <td>
-                                <button type="button" class="btn btn-lg color1"><i class="far fa-trash-alt"></i></button>
-                                <button type="button" class="btn btn-lg color1"><i class="far fa-edit"></i></button>
-                            </td>
-                            <td>
-                                <button type="button" class="btn btn-lg color1"><i class="far fa-star"></i></button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>Dark</td>
-                            <td>Series</td>
-                            <td>Agregar descripcion</td>
-                            <td>
-                                <div class="form-check form-switch">
-                                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                                    <label class="form-check-label" for="flexSwitchCheckDefault"></label>
-                                </div>
-                            </td>
-                            <td>
-                                <button type="button" class="btn btn-lg color1"><i class="far fa-trash-alt"></i></button>
-                                <button type="button" class="btn btn-lg color1"><i class="far fa-edit"></i></button>
-                            </td>
-                            <td>
-                                <button type="button" class="btn btn-lg color1"><i class="far fa-star"></i></button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>Dark</td>
-                            <td>Series</td>
-                            <td>Agregar descripcion</td>
-                            <td>
-                                <div class="form-check form-switch">
-                                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                                    <label class="form-check-label" for="flexSwitchCheckDefault"></label>
-                                </div>
-                            </td>
-                            <td>
-                                <button type="button" class="btn btn-danger btn-lg "><i class="far fa-trash-alt"></i></button>
-                                <button type="button" class="btn btn-lg color1"><i class="far fa-edit"></i></button>
-                            </td>
-                            <td>
-                                <button type="button" class="btn btn-lg color1"><i class="far fa-star"></i></button>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+            <div class="col-2">
+              <button type="button" class="btn btn-primary" id="btnAgregar">Agregar</button>
             </div>
+          </div>
+          <div class="table-responsive my-5">
+            <table class="table table-striped color1">
+              <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">Nombre</th>
+                  <th scope="col">Categoria</th>
+                  <th scope="col">Descripcion</th>
+                  <th scope="col">Imagen</th>
+                  <th scope="col">Opciones</th>
+                  <th scope="col">Publicar</th>
+                  <th scope="col">Destacar</th>
+                </tr>
+              </thead>
+              <tbody id="tablaItem">
+              </tbody>
+            </table>
+          </div>
         </section>
+      </main>
+      <!-- Modal Funkopop -->
+      <div
+        class="modal fade"
+        id="modalAgregar"
+        tabindex="-1"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Agregar</h5>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+                aria-label="Close"
+              ></button>
+            </div>
+            <div class="modal-body">
+              <form id="formItem" onsubmit="guardarItem(event)">
+                <div class="mb-3">
+                  <label class="form-label">Codigo</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="codigo"
+                    placeholder="Ingrese un codigo"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Nombre</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="nombre"
+                    placeholder="Batman"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Categoria</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="categoria"
+                    placeholder="DC"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Descripcion</label>
+                  <textarea class="form-control" placeholder="Descripción" id="descripcion" ></textarea>
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Imagen</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="imagen"
+                    placeholder="agregar nombre imagen"
+                  />
+                </div>
+                <button class="btn btn-primary" type="submit">Guardar</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
-
-
-
-
-    </main>
     <footer class="headFoot py-5">
         <section class="py-4 text-center text-light">
             <article class="row mx-0">
@@ -139,7 +148,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
+        <script type="module" src="js/admin.js"></script>
 </body>
 
 </html>
