administracion alimenta el primer carrousel

--- a/index.html
+++ b/index.html
@@ -66,22 +66,8 @@
       <div id="carousel" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <div class="row">
-              <div class="col">
-                <a href="detalle.html"><img src="img\godzilla-vs-kong.jpeg" alt="" class="slide"></a> 
-              </div>
-              <div class="col">
-                <a href="detalle.html"><img src="img\Marvel-Black-Widow-Movie-Poster.jpg" alt="" class="slide"></a>
-              </div>
-              <div class="col">
-                <a href="detalle.html"> <img src="img\Cruella.jpg" alt="" class="slide"> </a>
-              </div>
-              <div class="col">
-                <a href="detalle.html"><img src="img\Cruella.jpg" alt="" class="slide"></a>
-              </div>
-              <div class="col">
-                <a href="detalle.html"><img src="img\Cruella.jpg" alt="" class="slide"></a>
-              </div>
+            <div class="row" id="sliderPeliculas">
+              <!-- ññññ -->
             </div>
           </div>
           <div class="carousel-item">
