--- a/admin.html
+++ b/admin.html
@@ -36,8 +36,9 @@
               <button type="button" class="btn btn-primary" id="btnAgregar">Agregar</button>
             </div>
           </div>
+          <hr class="color2">
           <div class="table-responsive my-5">
-            <table class="table table-striped color1">
+            <table class="table color1">
               <thead>
                 <tr>
                   <th scope="col">#</th>
