--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
   </header>
   <main class="flex-grow-1 text-light">
     <section id="destacado" class="banner">
+
+      <!-- slider destacado -->
       <div class="carousel " data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
@@ -60,6 +62,9 @@
           </div>
         </div>
       </div>
+
+
+      
     </section>
     <section class=" container my-5">
       <h1>Peliculas nuevas</h1>
