cambiando texto en html y colocando nuevos estilos en el login

--- a/login.html
+++ b/login.html
@@ -78,22 +78,22 @@
       <section class="formulario__contenedor">
         <article class="formulario__trasero">
           <div class="formulario__trasero-login">
-            <h3>¿ya tienes una cuenta?</h3>
-            <p>incia sesíon para entrar en la pagina</p>
+            <h3>¿Ya tienes cuenta?</h3>
+            <p>Incia sesíon para entrar en la pagina</p>
             <button id="btn__iniciar-sesion">iniciar sesíon</button>
           </div>
 
           <div class="formulario__trasero-register">
-            <h3>¿no tienes cuenta?</h3>
-            <p>registrate para iniciar sesíon</p>
-            <button id="btn__registrarse">registrarse</button>
+            <h3>¿Primera vez por aquí?</h3>
+            <p class=""></p>
+            <button id="btn__registrarse" class="fw-bold">ÚNETE AHORA</button>
           </div>
           <!-- formulario de logueo y registro -->
         </article>
         <article class="formulario__login-register">
           <!-- login -->
           <form action="" class="formulario__login">
-            <h2>inciciar sesíon</h2>
+            <h2>Iniciar sesión</h2>
             <input
               type="text"
               id="emailInicio"
@@ -107,7 +107,7 @@
           </form>
           <!-- registro -->
           <form action="" id="form" class="formulario__register">
-            <h2>registrarse</h2>
+            <h2>Registrarse</h2>
             <div class="form-control">
               <input
                 type="text"
