--- a/login.html
+++ b/login.html
@@ -86,7 +86,7 @@
           <div class="formulario__trasero-register">
             <h3>¿Primera vez por aquí?</h3>
             <p class=""></p>
-            <button id="btn__registrarse" class="fw-bold">ÚNETE AHORA</button>
+            <button type="submit" id="btn__registrarse" class="fw-bold">ÚNETE AHORA</button>
           </div>
           <!-- formulario de logueo y registro -->
         </article>
@@ -179,7 +179,7 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
-    <script src="js/app.js"></script>
+    <script src="js/logicaLogin.js"></script>
     <script src="js/validacionesLogin.js"></script>
   </body>
 </html>
