--- a/detalle.html
+++ b/detalle.html
@@ -65,10 +65,7 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="login.html">Login</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="login.html">Registro</a>
+                <a class="nav-link" href="login.html">Login/Registro</a>
               </li>
             </ul>
           </div>
@@ -83,14 +80,14 @@
         <img id="movie_title_img" class="movie-title-img movie-desc-section" alt="movie-title"/>
 
         <div class="d-flex movie-desc-section">
-          <div class="bg-white d-flex btn-play flex-center control-btn">
+          <a class="bg-white d-flex btn-play flex-center control-btn" href="404.html">
             <span class="fs-2">&rtrif;</span>
             <p class="fw-bolder clear-attr">PLAY</p>
-          </div>
+          </a>
 
-          <div class="bg-dark flex-center add-btn rounded-circle">
+          <a class="bg-dark flex-center add-btn rounded-circle" href="404.html">
             <span class="text-white">&plus;</span>
-          </div>
+          </a>
         </div>
 
         <h3 id="movie_description" class="text-white w-50 movie-description movie-desc-section">
