se agrego pagina de contacto y mockup de recuperacion de contraseña sin validaciones

--- a/login.html
+++ b/login.html
@@ -37,6 +37,11 @@
               <a class="nav-link active" href="#">Login/Registro</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="contacto.html"
+                >Contacto</a
+              >
+            </li>
+            <li class="nav-item">
               <a class="nav-link d-none" href="admin.html">Administracion</a>
             </li>
           </ul>
@@ -66,7 +71,7 @@
           <h2>Iniciar sesíon</h2>
           <input type="text" id="emailInicio" placeholder="correo electronico" />
           <input type="password" placeholder="contraseña" />
-          <a href="" class="d-block text-decoration-none">
+          <a href="passwordRecover.html" class="d-block text-decoration-none">
             ¿Olvidaste tu contraseña?</a>
           <button>Entrar</button>
         </form>
