--- a/contacto.html
+++ b/contacto.html
@@ -31,66 +31,80 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+              <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="login.html">Login/Registro</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="contacto.html">Contacto</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link d-none" href="admin.html">Administracion</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
+              </li>
           </ul>
         </div>
       </div>
     </nav>
   </header>
-  <main class="flex-grow-1 text-light">
-    <section id="destacado" class="banner">
-      <div class="carousel " data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="img\americangodsart1.jpg" alt="Poster de la tercera temporada del show American Gods"
-              class="w-100 d-block banner">
-            <div class="carousel-caption d-none d-md-block">
-              <h5 id="titulo">American Gods</h5>
-              <p id="descripcion">Continua el camino de Shadow Moon y su destino entrezalado con los viejos y nuevos
-                dioses.</p>
-              <a href="404.html" class="btn btn-outline-info" type="button">Ver ahora</a>
-            </div>
+  <main class="container mt-5 py-5">
+    <section class="row">
+      <div class="col-sm-12 col-md-6">
+        <h2 class="lead text-start text-light mb-4">
+          Envianos tu consulta.
+        </h2>
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
           </div>
+          <input
+            type="text"
+            class="form-control"
+            placeholder="El Critico"
+            aria-label="Username"
+            aria-describedby="basic-addon1"
+          />
+        </div>
+        <div class="input-group mb-3">
+          <div class="input-group-prepend">
+          </div>
+          <input
+            type="text"
+            class="form-control"
+            placeholder="elcritico@gmail.com"
+            aria-label="Username"
+            aria-describedby="basic-addon1"
+          />
+        </div>
+        <div class="input-group">
+          <div class="input-group-prepend">
+          </div>
+          <textarea
+            class="form-control"
+            aria-label="With textarea"
+            placeholder="Me encanta su pagina :)"
+          ></textarea>
+        </div>
+        <a href="404.html"><button type="button" class="btn btn-light my-3">Enviar</button></a>
+
+      </div>
+      <div class="col-sm-12 col-md-6">
+        <article class="lead text-light">Encontranos en Gral. Paz 576, T4000 San Miguel de Tucumán, Tucumán</article>
+        <div class="mt-5">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.1023707775184!2d-65.20939048529601!3d-26.83669609650096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94225d3ad7f30f1d%3A0xf8606cd659b8e3e4!2sRollingCode%20School!5e0!3m2!1ses-419!2sar!4v1605411094060!5m2!1ses-419!2sar"
+            width="400"
+            height="250"
+            frameborder="3"
+            style="border: 0"
+            allowfullscreen=""
+            aria-hidden="false"
+            tabindex="0"
+          class="map w-100 p-0"></iframe>
         </div>
       </div>
+
+
     </section>
-    <section class=" container my-5">
-      <h1>Peliculas nuevas</h1>
-      <div id="carousel" class="carousel slide" data-ride="carousel">
-
-        <div class="carousel-inner">
-
-          <div class="carousel-item row active">
-            
-            <div class="row" id="slider-item">
-              
-        </div>
-
-        <div class="left">
-          <a class="carousel-control-prev" href="#carousel" type="button" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon " aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-        </div>
-        <div class="right">
-          <a class="carousel-control-next " href="#carousel" type="button" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-      </div>
-    </section>
-
   </main>
   <footer class="headFoot py-5">
     <section class="py-4 text-center text-light">
