Agregada las funcionalidades de detalle.html con admin para agregar articulos

--- a/admin.html
+++ b/admin.html
@@ -110,11 +110,29 @@
                   <textarea class="form-control" placeholder="Descripción" id="descripcion" ></textarea>
                 </div>
                 <div class="mb-3">
-                  <label class="form-label">Imagen</label>
+                  <label class="form-label">Poster</label>
                   <input
                     type="text"
                     class="form-control"
                     id="imagen"
+                    placeholder="agregar nombre imagen"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Imagen de Fondo</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="bg_img"
+                    placeholder="agregar nombre imagen"
+                  />
+                </div>
+                <div class="mb-3">
+                  <label class="form-label">Imagen de Titulo</label>
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="title_img"
                     placeholder="agregar nombre imagen"
                   />
                 </div>
