--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
+    <script src="js/movie-detalle.js" defer type="module"></script>
     <script src="js/app.js"></script>
     <script type="module" src="js/index.js"></script>
   </body>
