se arregló el estilo de la pagina de admin

--- a/admin.html
+++ b/admin.html
@@ -12,8 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-    <!-- <link rel="stylesheet" href="css\style.css"> -->
-    <link rel="stylesheet" href="/css/admin.css">
+    <link rel="stylesheet" href="css\style.css">
     <link rel="shorcut icon" href="img\biona logo.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/2ee0d9adf3.js" crossorigin="anonymous"></script>
@@ -21,11 +20,11 @@
     <title>El Critico</title>
 </head>
 
-<body class="bg4">
+<body class="footfix">
     <header>
 
     </header>
-    <main class="container">
+    <main class="container flex-grow-1">
 
         <section class="my-5">
           <div class="row">
@@ -126,7 +125,7 @@
       </div>
 
 
-    <footer class="headFoot py-5">
+    <footer class="headFoot">
         <section class="py-4 text-center text-light">
             <article class="row mx-0">
                 <div class="col-sm-12 col-md-12 col-lg-4 py-3">
