--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <!-- slider destacado -->
       <div class="carousel " data-bs-ride="carousel">
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          <div class="carousel-item active" id="destacadoSlider">
             <img src="img\americangodsart1.jpg" alt="Poster de la tercera temporada del show American Gods"
               class="w-100 d-block banner">
             <div class="carousel-caption d-none d-md-block">
